# superbrainSdk

./: BLOG_DRAFT.md  DOCUMENTATION.md  LICENSE  README.md  RELEASE_GUIDE.md  go.mod
cmd/http-bridge/: main.go
cmd/mcp-server/: main.go
deploy/helm/superbrain/: Chart.yaml  values.yaml
deploy/helm/superbrain/templates/: _helpers.tpl  coordinator.yaml  memory-node.yaml
lib/: libsuperbrain.h
node/: README.md  index.ts  lcc.ts  package.json
python/: README.md  pyproject.toml  python_demo.py  setup.py
python/superbrain/: __init__.py  auto.py  client.py  lcc.py  mcp_server.py  monitor.py  security.py  telemetry.py
python/superbrain/integrations/: langchain.py  llamaindex.py  semantic.py
python/superbrain_fabric_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/superbrain_sdk-3.0.0/: README.md
python/superbrain_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/: client.go
showcase/: capture.cjs  index.html  package-lock.json  package.json
showcase/src/: App.tsx  index.css
tests/: test_edge.py
