[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superbrain-sdk"
version = "0.7.3"
description = "High-performance distributed memory fabric for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["distributed-systems", "shared-memory", "ai-agents", "performance", "memory-fabric"]
authors = [{name = "anispy211", email = "anispy211@gmail.com"}]
dependencies = ["numpy", "faiss-cpu"]

[project.optional-dependencies]
semantic = ["sentence-transformers"]

[project.urls]
"Homepage" = "https://github.com/anispy211/superbrainSdk"
"Bug Tracker" = "https://github.com/anispy211/superbrainSdk/issues"

[tool.setuptools]
packages = ["superbrain", "superbrain.integrations", "superbrain.lib"]

[tool.setuptools.package-data]
"superbrain.lib" = ["*.so", "*.dylib", "*.dll"]
