[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superbrain-sdk"
version = "3.0.0-cognitive"
description = "High-performance distributed memory fabric for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Business Source License 1.1"}
keywords = ["distributed-systems", "shared-memory", "ai-agents", "performance", "memory-fabric"]
authors = [{name = "anispy211", email = "anispy211@gmail.com"}]
dependencies = ["numpy", "faiss-cpu"]

[project.optional-dependencies]
semantic = ["sentence-transformers"]

[project.urls]
"Homepage" = "https://github.com/golightstep/superbrainSdk"
"Bug Tracker" = "https://github.com/golightstep/superbrainSdk/issues"

[tool.setuptools]
packages = ["superbrain", "superbrain.integrations", "superbrain.lib"]

[tool.setuptools.package-data]
"superbrain.lib" = ["*.so", "*.dylib", "*.dll"]
