[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superbrain-fabric-sdk"
version = "5.1.0"
description = "Superbrain Fabric v5.1 — The Soul Expansion: LCC, Memory History, Knowledge Graph & MIRROR stability."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Business Source License 1.1"}
keywords = ["distributed-systems", "cognitive-fabric", "layered-compression", "memory-history", "knowledge-graph", "ai-agents", "llm", "langchain", "mcp"]
authors = [{name = "anispy211", email = "anispy211@gmail.com"}]
dependencies = ["numpy", "faiss-cpu"]

[project.optional-dependencies]
semantic = ["sentence-transformers"]

[project.urls]
"Homepage" = "https://github.com/golightstep/superbrainSdk"
"Bug Tracker" = "https://github.com/golightstep/superbrainSdk/issues"

[tool.setuptools]
packages = ["superbrain", "superbrain.integrations", "superbrain.lib"]

[tool.setuptools.package-data]
"superbrain.lib" = ["*.so", "*.dylib", "*.dll"]
